# virtualization-rs

./: Cargo.toml  Makefile
examples/: vm-cli.rs  window.rs
src/: base.rs
src/virtualization/: graphics_device.rs  image_installer.rs  mac_platform_configuration.rs  macos_boot_loader.rs  mod.rs  virtual_machine.rs
