[package]
name = "virtualization-rs"
version = "0.1.2"
authors = ["Sotetsu Suzugamine <s.suzugamine@gmail.com>"]
edition = "2018"
license = "MIT"
description = "virtualization-rs provides the API of the Apple Virtualization.framework in Rust language."
repository = "https://github.com/suzusuzu/virtualization-rs"
readme = "README.md"
keywords = ["macOS", "Virtualization", "VM"]
categories = ["api-bindings"]

[dependencies]
libc = "0.2.82"
objc = {version = "0.2.7", features = ["exception"]}
block = "0.1.6"
reqwest = {version = "0.11.13", features = ["blocking"]}
cocoa = "0.24.1"
#"/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/dispatch"

[dev-dependencies]
structopt = "0.3.21"
